--- a/frontend/src/pages/App/patients/Patients.module.css
+++ b/frontend/src/pages/App/patients/Patients.module.css
@@ -203,6 +203,10 @@
     justify-content: end;
 }
 
+.patientsSection > .buttonContainer {
+    margin-bottom: 2rem;
+}
+
 .addPatientButton{
     display: flex;
     justify-content: center;
