--- a/frontend/src/pages/App/plans/styles/Plans.module.css
+++ b/frontend/src/pages/App/plans/styles/Plans.module.css
@@ -16,6 +16,10 @@
     justify-content: center;
 }
 
+.listActions {
+    margin-bottom: 2rem;
+}
+
 .planCreatorBody{
     width: 87%;
     height: 100%;
